# football_manager

./: .coveragerc  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: test.yml
docs/: conf.py  fifa_manager.rst  fifa_manager.setting.rst  index.rst  manager.migrations.rst  manager.rst  manager.submodels.rst  manager.tests.rst  modules.rst
fifa_manager/: asgi.py  settings.py  urls.py  wsgi.py
fifa_manager/setting/: base.py  dev.py  prod.py  testing.py
manager/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
manager/models/: base_models.py  core_models.py  helper_models.py  user_models.py
manager/submodels/: base_models.py  core_models.py  user_models.py
manager/tests/: test_base_models.py  test_core_models.py  test_models.py  test_user_models.py  test_views.py
