[tool.poetry]
name = "fifa_manager"
version = "1.0.0"
description = ""
authors = ["Masum Billal <proafxin@users.noreply.github.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
django = "*"
mypy = "^1.4.1"
djangorestframework = "*"
drf-yasg = "^1.21.7"
django-debug-toolbar = "^4.2.0"
django-silk = "^5.0.3"
requests = "^2.31.0"
coreapi = "^2.3.3"
coreschema = "^0.0.4"
mysqlclient = "^2.2.0"


[tool.poetry.group.formatting.dependencies]
black = "^23.7.0"
ruff = "^0.0.282"
isort = "^5.12.0"

[tool.ruff]

src = ["models", "tests", 'services', "views"]

line-length = 100

select = [
  "E",
  "F",
  "B",
  "W",
  "Q",
  "UP",
  "I",
  "N",
  "I001",
]

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.isort]
# combine-as-imports = true
force-sort-within-sections = true
# lines-between-types = 2
lines-after-imports = 2
relative-imports-order = "closest-to-furthest"
order-by-type = true
# section-order = ["future", "standard-library", "first-party", "local-folder", "third-party"]


[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.pylint]
max-args = 10


[tool.mypy]
# files = ["bundled/tool", "tests"]
no_implicit_optional = true
check_untyped_defs = true


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "*"
sphinx-rtd-theme = "*"




[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"